fix: narrowed menu items on mobile devices

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -142,6 +142,7 @@ time {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
     max-width: 768px;
     width: 100%;
 }
